--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
 <body>
 <div class="container">
     <div class="dashboard">
-        <div style="font-size: 0.7em; opacity: 0.5; letter-spacing: 1px;">SISA BUDGET: JACQUELYN</div>
+        <div style="font-size: 0.7em; opacity: 0.5; letter-spacing: 1px;">Total Budget:</div>
         <div class="main-balance" id="wallet-val">Rp0</div>
         <div class="stats-grid">
             <div><div style="opacity: 0.5;">Belanjaan Sisa:</div><div id="target-val">Rp0</div></div>
@@ -152,3 +152,4 @@
 </div>
 </body>
 </html>
+
