--- a/index.html
+++ b/index.html
@@ -22,13 +22,14 @@
         const app = initializeApp(firebaseConfig);
         const db = getDatabase(app);
         
-        // --- LOGIKA MULTI-USER ---
-        let userKey = localStorage.getItem('xsr_user_key');
-        if (!userKey) {
-            userKey = prompt("Masukkan Username (Gunakan nama yang sama untuk login di HP lain):") || "guest";
-            userKey = userKey.toLowerCase().replace(/\s+/g, '');
-            localStorage.setItem('xsr_user_key', userKey);
+        // --- LOGIKA MULTI-USER (ANTI HURUF KAPITAL) ---
+        let rawInput = localStorage.getItem('xsr_user_key');
+        if (!rawInput) {
+            rawInput = prompt("Masukkan Username (Huruf besar/kecil tidak berpengaruh):") || "guest";
         }
+        // Ubah ke kecil semua dan hapus spasi
+        let userKey = rawInput.toLowerCase().trim().replace(/\s+/g, '');
+        localStorage.setItem('xsr_user_key', userKey);
 
         const userPath = `users/${userKey}`;
         const dataRef = ref(db, userPath);
@@ -40,17 +41,29 @@
             customItems: [] 
         };
 
+        // DATA DEFAULT KHUSUS UNTUK USER: JACQUELYN
+        const jacquelynDefaults = [
+            { name: "Helm KYT R2R", price: 2100000 },
+            { name: "Action Cam", price: 1000000 },
+            { name: "Intercom Budget/Ejeas", price: 350000 },
+            { name: "Stang Clubman", price: 132000 },
+            { name: "Spion Bar End", price: 100000 },
+            { name: "Tail Tidy", price: 100000 },
+            { name: "Mudguard", price: 130000 },
+            { name: "Phone Holder GUB", price: 50000 },
+            { name: "Radiator Guard", price: 150000 }
+        ];
+
         window.saveData = () => { set(dataRef, state); };
 
         window.editTitle = () => {
-            const newTitle = prompt("Masukkan Nama Project Kamu:", state.projectTitle);
+            const newTitle = prompt("Ganti Nama Project:", state.projectTitle);
             if (newTitle) { state.projectTitle = newTitle; window.saveData(); }
         };
 
         window.logout = () => {
             if(confirm("Logout dan ganti user?")) {
                 localStorage.removeItem('xsr_user_key');
-                localStorage.removeItem('jacquelyn_auth'); // Reset PIN auth jika ada
                 location.reload();
             }
         };
@@ -89,19 +102,28 @@
                 state = data; 
                 render(); 
             } else { 
-                // Inisialisasi data untuk user baru
-                state = { 
-                    projectTitle: "Project: " + userKey.toUpperCase(), 
-                    history: [], 
-                    checkedStates: {}, 
-                    customItems: [] 
-                };
+                // Jika user baru adalah 'jacquelyn', masukkan data bawaan
+                if (userKey === 'jacquelyn') {
+                    state = { 
+                        projectTitle: "Project: XSR CAFE RACER", 
+                        history: [], 
+                        checkedStates: {}, 
+                        customItems: jacquelynDefaults 
+                    };
+                } else {
+                    state = { 
+                        projectTitle: "Project: " + userKey.toUpperCase(), 
+                        history: [], 
+                        checkedStates: {}, 
+                        customItems: [] 
+                    };
+                }
                 window.saveData();
             }
         });
 
         function render() {
-            document.getElementById('main-title').innerText = state.projectTitle || "Project: Bike";
+            document.getElementById('main-title').innerText = state.projectTitle;
             const checklistBody = document.getElementById('checklist-body');
             const tIn = document.getElementById('table-in');
             const tOut = document.getElementById('table-out');
@@ -143,64 +165,4 @@
     </script>
     <style>
         :root { --bg-color: #0d0d0d; --card-bg: #161616; --text-color: #e0e0e0; --accent-color: #D000FF; --success: #00ff88; --danger: #ff4d4d; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg-color); color: var(--text-color); display: flex; flex-direction: column; align-items: center; padding: 20px; margin: 0; }
-        .main-title { color: var(--accent-color); font-size: 1.8em; font-weight: bold; margin-bottom: 20px; text-transform: uppercase; letter-spacing: 3px; cursor: pointer; text-shadow: 0 0 10px rgba(208, 0, 255, 0.3); text-align: center; }
-        .container { width: 100%; max-width: 600px; background: var(--card-bg); padding: 25px; border-radius: 20px; box-shadow: 0 10px 40px rgba(0,0,0,0.8); border: 1px solid #222; }
-        .dashboard { background: #222; padding: 20px; border-radius: 15px; margin-bottom: 25px; border-bottom: 3px solid var(--accent-color); }
-        .main-balance { font-size: 2em; font-weight: bold; color: #fff; margin-bottom: 10px; }
-        .progress-container { background: #333; height: 10px; border-radius: 5px; overflow: hidden; margin: 15px 0 5px 0; }
-        .progress-bar { background: var(--accent-color); height: 100%; width: 0%; transition: 0.8s ease; }
-        .input-group { background: #1a1a1a; padding: 15px; border-radius: 12px; margin-bottom: 15px; }
-        input { background: #000; border: 1px solid #444; color: #fff; padding: 12px; border-radius: 8px; width: 100%; margin-bottom: 10px; box-sizing: border-box; }
-        button { width: 100%; padding: 12px; border: none; border-radius: 8px; cursor: pointer; font-weight: bold; }
-        .btn-in { background: var(--success); } .btn-out { background: var(--danger); color: #fff; }
-        .btn-add { background: #333; color: var(--accent-color); border: 1px solid var(--accent-color); margin-bottom: 5px; }
-        .btn-logout { background: transparent; color: #555; font-size: 0.7em; margin-top: 20px; border: 1px solid #333; }
-        .target-table { width: 100%; border-collapse: collapse; }
-        .target-table tr.checked { opacity: 0.3; text-decoration: line-through; }
-        .target-table td { padding: 12px 5px; border-bottom: 1px solid #222; }
-        .txt-success { color: var(--success); } .txt-danger { color: var(--danger); }
-        .hist-table { width: 100%; font-size: 0.8em; border-collapse: collapse; margin-top: 10px; }
-    </style>
-</head>
-<body>
-    <div class="main-title" id="main-title" onclick="editTitle()">PROJECT: LOADING...</div>
-    <div class="container">
-        <div class="dashboard">
-            <div style="font-size: 0.7em; opacity: 0.5; letter-spacing: 1px;">TOTAL BUDGET:</div>
-            <div class="main-balance" id="wallet-val">Rp0</div>
-            <div style="font-size: 0.8em; opacity: 0.5;">Sisa Belanjaan: <span id="target-val">Rp0</span></div>
-            <div class="progress-container"><div id="progress-bar" class="progress-bar"></div></div>
-            <div id="progress-percent" style="font-size: 0.65em; color: var(--accent-color); text-align: right; margin-top: 5px;">0%</div>
-        </div>
-
-        <div class="input-group">
-            <p style="font-size: 0.7em; color: var(--accent-color); margin: 0 0 10px 0;">+ TAMBAH BARANG KE LIST</p>
-            <input type="text" id="item-name" placeholder="Nama Barang">
-            <input type="number" id="item-price" placeholder="Harga Barang Rp">
-            <button class="btn-add" onclick="addNewItem()">Tambahkan</button>
-        </div>
-
-        <div class="input-group">
-            <p style="font-size: 0.7em; color: var(--success); margin: 0 0 10px 0;">+/- DOMPET (GAJIAN/CASH)</p>
-            <input type="text" id="desc-input" placeholder="Keterangan">
-            <input type="number" id="amount-input" placeholder="Nominal Rp">
-            <div style="display: flex; gap: 10px;">
-                <button class="btn-in" onclick="addTransaction('IN')">Masuk</button>
-                <button class="btn-out" onclick="addTransaction('OUT')">Keluar</button>
-            </div>
-        </div>
-
-        <h3 style="font-size: 0.9em; color: var(--accent-color); border-left: 3px solid var(--accent-color); padding-left: 10px; margin: 20px 0 10px 0;">BUILD CHECKLIST</h3>
-        <table class="target-table"><tbody id="checklist-body"></tbody></table>
-        
-        <h3 style="font-size: 0.9em; color: var(--accent-color); border-left: 3px solid var(--accent-color); padding-left: 10px; margin: 25px 0 10px 0;">HISTORY</h3>
-        <div style="display: grid; grid-template-columns: 1fr 1fr; gap: 15px;">
-            <div><p style="font-size: 0.6em; color: var(--success); text-align: center;">MASUK</p><table class="hist-table"><tbody id="table-in"></tbody></table></div>
-            <div><p style="font-size: 0.6em; color: var(--danger); text-align: center;">KELUAR</p><table class="hist-table"><tbody id="table-out"></tbody></table></div>
-        </div>
-
-        <button class="btn-logout" onclick="logout()">LOGOUT / GANTI USER</button>
-    </div>
-</body>
-</html>
+        body { font-family: 'Segoe UI', sans-serif; background: var(--bg-color); color: var(--text-color); display: flex;
